# peft_finetuning

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  llama2_pubmedqa.yaml  llama3_1_medqa.yaml  qwen3_medqa.yaml
scripts/: evaluate.py  infer.py  push_to_hub.py  test_question.txt  train.py
src/data/: __init__.py  formatting.py  loader.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/inference/: __init__.py  generate.py
src/model/: __init__.py  loader.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  hub.py  logging.py
tests/: test_config.py  test_formatting.py  test_metrics.py
